fixed responsive website on small phone screens

--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-    font-family: 'Titan One', cursive;
+    font-family: 'Titan One', sans-serif;
 }
 
 body {
@@ -30,6 +30,7 @@ header {
 }
 
 h1  {
+    font-size: 2.5rem;
     font-size: clamp(1rem, 7vw, 2.5rem);
 }
 
@@ -50,7 +51,7 @@ main {
 .announce-winner {
     transition: 0.2s;
     text-align: center;
-    font-size: clamp(1.5rem, 2vw, 3vw);
+    font-size: 2.5rem;
 }
 
 .announce-game-winner {
@@ -60,9 +61,9 @@ main {
 /* Player Selection Options */
 
 .options {
-    display: flex;
-    gap: 2rem;
-    flex-wrap: wrap;
+    display: grid;
+    grid-auto-flow: column;
+    grid-auto-columns: 1fr;
 }
 
 .option {
@@ -132,9 +133,17 @@ main {
 
 /* RESPONSIVE */
 
-@media (max-width: 545px) {
+@media (max-width: 620px) {
+    h1 {
+        font-size: 1.8rem;
+    }
+
+    main {
+        gap: 0.9rem;
+    }
     .announce-winner {
         margin: 0 10px;
+        font-size: 1.5rem;
     }
     .announce-game-winner {
         transform: scale(1.05);
@@ -145,7 +154,7 @@ main {
     }
 
     .option {
-        padding: 1rem;
+        padding: 0.2rem;
         gap: 0;
     }
 
@@ -158,7 +167,7 @@ main {
     }
     
     .option.rock > p {
-        margin-left:0;
+        margin-left: 5px;
     }
 
     .score {
